tests/ui/parser/unbalanced-doublequote.stderr
error[E0765]: unterminated double quote string
  --> $DIR/unbalanced-doublequote.rs:5:5
   |
LL | /     "
LL | | }
<<<<<<< HEAD
LL | |
LL | | // ferrocene-annotations: fls_hucd52suu6it
...  |
LL | | // ferrocene-annotations: fls_boyhlu5srp6u
LL | | // String Literals
   | |___________________^
=======
   | |_^
>>>>>>> pull-upstream-temp--do-not-use-for-real-code

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
